--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input class="color1 " type="color" name="color1" value="#FF0000">
         <input class="color2" type="color" name="color2" value="#0000FF">
         <h2 class="text-uppercase mt-5">Current Css background</h2>
-        <h3 class="update"></h3>
+        <p class="update"></p>
     </div>
     <script src="script.js"></script>
 </body>
