--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body id="generator">
     <div class="container text-center p-5">
-        <h1 class="mb-4 text-uppercase">Background color Generator</h1>
+        <h1 class="mb-4 text-uppercase">Background Generator</h1>
         <input class="color1 " type="color" name="color1" value="#FF0000">
         <input class="color2" type="color" name="color2" value="#0000FF">
         <h2 class="text-uppercase mt-5">Current Css background</h2>
