--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="mb-4 text-uppercase">Background generator</h1>
         <input class="color1 " type="color" name="color1" value="#FF0000">
         <input class="color2" type="color" name="color2" value="#0000FF">
-        <h2 class="text-uppercase mt-5">Current Css background</h2>
+        <h2 class="text-uppercase mt-5">Current CSS background</h2>
         <p class="update"></p>
     </div>
     <script src="script.js"></script>
